# openapi-proc-macros

./: Cargo.toml  README.md
api-gen/: Cargo.toml
api-gen-macro/: Cargo.toml
api-gen-macro/src/: lib.rs
petstore/: Cargo.toml  petstore-expanded.json
petstore/src/: main.rs
