[package]
name = "api-gen-macro"
version = "0.0.1"
authors = ["Simon Gomizelj <simon@vodik.xyz>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.13"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
syn = { version = "1.0", features = ["full"] }
thiserror = "1.0"
